@@ -1,3 +1,14 @@
+Tue Sep 16 03:12:41 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/asm/Literal.java: does not inherit
+	  AsmOperand.
+
+	* net/loveruby/cflat/asm/Assembler.java: do not use Literals in
+	  instruction operand.
+
+	* net/loveruby/cflat/asm/ImmediateValue.java: accept only
+	  Literals.
+
 Tue Sep 16 02:53:07 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/asm/Symbol.java -> LabelRef.java
